[package]
name = "rust-todo-app"
version = "0.1.0"
authors = ["kmkzt <info.pscreator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
askama = "0.10.3"
r2d2 = "0.8.9"
r2d2_sqlite = "0.16.0"
rusqlite = { version = "0.23", features=["bundled"] }
serde = { version = "1.0", features=["derive"] }
thiserror = "1.0.20"
